- [changed] style for bills - [fixed] issue where pressing shift+tab on the last billing item 'total' field would add a new billing item - started work on pressing 'enter' to submit a bill

--- a/src/main/webapp/billing/CA/ON/billingONNewReport.css
+++ b/src/main/webapp/billing/CA/ON/billingONNewReport.css
@@ -58,12 +58,14 @@
 	background: #e8edff; 
 	border-bottom: 1px solid #fff;
 	color: #669;
+	font-weight: normal;
 	border-top: 1px solid transparent;
 }
 #bill-list tr:hover td
 {
 	background: #d0dafd;
 	color: #339;
+	font-weight: normal;
 }
 
 #bill-list #bill td
@@ -73,9 +75,14 @@
 
 #bill-list .no-bills
 {
-	background: #FF6666;
+	background: #e8edff;
+	color: red;
+	font-weight: bold;
+	
 }
 #bill-list tr:hover .no-bills
 {
-	background: #FF0033;
+	background: #d0dafd;
+	color: red;
+	font-weight: bold;
 }
